--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,18 +60,7 @@ a {
     background-position: center;
 }
 
-/* Float Element */
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-/* Article Content Start */
+/* Content Article Start */
 content {
     width: 75%;
     display: inline-block;
@@ -129,3 +118,15 @@ footer {
 .footer h2 {
     font-size: 20px;
 }
+
+/* Float Element */
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
